[package]
name = "bruges-rspy"
version = "0.1.0"
authors = ["Tony <trhallam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bruges_rspy"
crate-type = ["cdylib"]

[dependencies]
bruges-rs = {path = "../bruges-rs"}


[dependencies.pyo3]
version = "0.13.1"
features = ["extension-module"]
